0.3.5
	- Fix logging bug in 0.3.4 update
0.3.4
	- Fix bug in 0.3.3 update
0.3.3
	- Export overrider function to enable use with arbitrary dict
0.3.2
	- Move config dump script to entry_point.console_scripts
	- Add truncate value option to dump tool
0.3.1
	- Remove None string literal on empty values in dump
0.3.0
	- Remove spaces around equals sign in string dump
0.2.7
	- Remove stray shebang in module file
0.2.6
	- Return default on empty string value
0.2.5
	- Add default value as second argument to get
0.2.4
	- Published on pypi.org
0.2.3
	- (skipped)
0.2.2
	- (skipped)
0.2.1
	- Set logger name
	- Omit empty string environment variables
0.2.0
	- Add optional prefix string for environment overrides
0.1.1
	- Add boolean lookup
0.1.0
	- Add gnupg support