@@ -1,0 +1,15 @@
+[metadata]
+classifiers =
+	Environment :: No Input/Output (Daemon)
+	Programming Language :: Python :: 3
+	Operating System :: OS Independent
+	Development Status :: 3 - Alpha
+	Intended Audience :: Developers
+	Topic :: Software Development :: Libraries
+	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+license_files =
+	LICENSE.txt
+
+[options.entry_points]
+console_scripts =
+	confini-dump = confini.runnable.dump:main
