@@ -1,0 +1,10 @@
+[true]
+a = true
+b = True
+c = 1
+
+[false]
+a = false
+b = False
+c = 0
+d = 
